--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "drizzle-orm": "^0.32.1",
     "lucia": "^3.2.0",
     "lucide-react": "^0.424.0",
-    "next": "14.2.5",
+    "next": "^14.2.32",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -35,18 +35,18 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vite-plugin-env-compatible": "^2.0.1",
-    "vitest": "^2.0.5",
+    "vitest": "^3.2.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@vitest/coverage-istanbul": "^2.0.5",
-    "drizzle-kit": "^0.23.1",
+    "@vitest/coverage-istanbul": "^3.2.4",
+    "drizzle-kit": "^0.31.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
-    "eslint-plugin-boundaries": "^4.2.2",
+    "eslint-plugin-boundaries": "^5.0.1",
     "postcss": "^8",
     "prettier": "^3.3.3",
     "tailwindcss": "^3.4.1",
